<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/m23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="123dp"
        android:layout_height="145dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/profile_image_desc"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/select_mood"
        android:layout_width="390dp"
        android:layout_height="79dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/select_mood"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <GridLayout
        android:id="@+id/mood_buttons"
        android:layout_width="406dp"
        android:layout_height="445dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_mood">

        <Button
            android:id="@+id/btn_happy"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/happy"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sad"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/sad"
            android:textColor="@color/white"
            android:textSize="30sp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_relaxed"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/relaxed"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_energetic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/energetic"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

</androidx.constraintlayout.widget.ConstraintLayout>
