<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/m8"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="-16dp" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="403dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:fontFamily="sans-serif-black"
            android:hint="@string/username_hint"
            android:importantForAccessibility="yes"
            android:importantForAutofill="yes"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:fontFamily="sans-serif-black"
            android:hint="@string/email_hint"
            android:importantForAccessibility="yes"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="telephoneNumber"
            android:fontFamily="sans-serif-black"
            android:hint="@string/phone_hint"
            android:importantForAccessibility="yes"
            android:importantForAutofill="yes"
            android:inputType="phone"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="newPassword"
            android:fontFamily="sans-serif-black"
            android:hint="@string/password_hint"
            android:importantForAccessibility="yes"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="newPassword"
            android:fontFamily="sans-serif-black"
            android:hint="@string/confirm_password_hint"
            android:importantForAccessibility="yes"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/accentColor"
            android:fontFamily="sans-serif-black"
            android:importantForAccessibility="yes"
            android:text="@string/signup_button_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAlreadyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/login_prompt"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/accentColor"
                android:fontFamily="sans-serif-black"
                android:importantForAccessibility="yes"
                android:text="@string/login_button"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
